--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classcat": "^5.0.4",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "firebase": "^10.1.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
