--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "firebase": "^10.1.0",
-    "next": "13.4.10",
+    "next": "13.2.2",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-share": "^4.4.1",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.4"
   }
 }
